--- a/textlistforms.html
+++ b/textlistforms.html
@@ -1,3 +1,81 @@
-<p> <a href="textlistforms.html">Textes&Listes&Formulaires  </a> | <a href="tables.html">Tableaux </a> | <a href="medias.html">Medias</a></p>  
-   
+
+
+
+
+<!DOCTYPE html> <!--pour HTML5--> 
+<html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <title> Formulaire - ISEN - LB </title>
+    </head>
+    <body>
+        <p> <a href="textlistforms.html">Textes&Listes&Formulaires  </a> | <a href="tables.html">Tableaux </a> | <a href="medias.html">Medias</a></p>  
+<hr>
+
+<u>
+    <li> Etudiant </li>
+    <li> Enseignant </li>
+    <li> Abréviations </li>
+
+</u>
+<hr>
+<h1> 1. Etudiant </h1>
+<form action="textlistforms.html" method="get">
+    Prénom:
+    <input type="text" name="fname">
+    Nom:
+    <input type="text" name="lname"><br>
+    Année d'études :
+    <input type="radio" name="A" value ="1A">1A
+    <input type="radio" name="A" value ="2A">2A
+    <br>
+    Remarques : 
+    <br>
+    <textarea name="" rows="5" cols = "50"></textarea>
+    <br>
+
+    <input type="submit" value="Valider">
+</form>
+<hr>
+<h1> 2. Enseignant </h1>
+<br>
+<form action="textlistforms.html" method="get">
+    Prénom:
+    <br>
+    <input type="text" name="Ename">
+    <br>
+    Nom:
+    <br>
+    <input type="text" name="Iname"><br>
+    <br>
+    Site : 
+    <br>
+    <select name = "lol"> 
+        <option>Brest</option>
+        <option>Nantes</option>
+        <option>Rennes</option>
+        <option>Lille</option>
+    </select>
+    <br>
+    Mot de passe : 
+    <br>
+    <input type="text" name="Mdp">
+    <br>
+    <input type="submit" value="Valider">
+
+</form>
+<hr>
+
+<h1> 3. Abbreviations </h1>
+<br>
+<h3>ISEN</h3>
+
+<p><blockquote> Institut Supérieur de l'Electronique et du Numérique</blockquote> </p>
+
+<h3>HTML</h3>
+
+<p><blockquote> HyperText Markup language</blockquote> </p>
+
+    </body>
+</html>
 
