--- a/textlistforms.html
+++ b/textlistforms.html
@@ -11,13 +11,12 @@
     <body>
         <p> <a href="textlistforms.html">Textes&Listes&Formulaires  </a> | <a href="tables.html">Tableaux </a> | <a href="medias.html">Medias</a></p>  
 <hr>
-
-<u>
+<ul>
     <li> Etudiant </li>
     <li> Enseignant </li>
     <li> Abréviations </li>
+</ul>
 
-</u>
 <hr>
 <h1> 1. Etudiant </h1>
 <form action="textlistforms.html" method="get">
@@ -31,7 +30,7 @@
     <br>
     Remarques : 
     <br>
-    <textarea name="" rows="5" cols = "50"></textarea>
+    <textarea name="Remarques" rows="5" cols = "50"></textarea>
     <br>
 
     <input type="submit" value="Valider">
@@ -70,11 +69,11 @@
 <br>
 <h3>ISEN</h3>
 
-<p><blockquote> Institut Supérieur de l'Electronique et du Numérique</blockquote> </p>
+<blockquote> Institut Supérieur de l'Electronique et du Numérique</blockquote> 
 
 <h3>HTML</h3>
 
-<p><blockquote> HyperText Markup language</blockquote> </p>
+<blockquote> HyperText Markup language</blockquote> 
 
     </body>
 </html>
