--- a/medias.html
+++ b/medias.html
@@ -1,1 +1,14 @@
-<p> <a href="textlistforms.html">Textes&Listes&Formulaires  </a> | <a href="tables.html">Tableaux </a> | <a href="medias.html">Medias</a></p>  
+  
+
+
+<!DOCTYPE html> <!--pour HTML5--> 
+<html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <title> Formulaire - ISEN - LB </title>
+    </head>
+    <body>
+        <p> <a href="textlistforms.html">Textes&Listes&Formulaires  </a> | <a href="tables.html">Tableaux </a> | <a href="medias.html">Medias</a></p>  
+
+    </body>
+</html>
