--- a/medias.html
+++ b/medias.html
@@ -28,23 +28,19 @@
             insert_photo
             </span></h3>
             <table>
-                <tr>
-                    <td><th colspan="1"> <img src="/image/nantes.jpg" alt="texte" width="250" height="170"> </th>   
+              <tr>
+                <td rowspan="2"> <img src="/image/nantes.jpg" alt="texte" width="250" height="170">  </td>
+                <td> <svg width="400" height="110">
+                  <rect width="200" height="150" style="fill:rgb(0,0,255);" />
+                  </svg></td>
+                <td rowspan="1"> <img src="/image/nantes.jpg" alt="texte" width="250" height="170">  </td>
+              </tr>
 
-                    </td>
+              <tr>
+                <th colspan="1"> XXXXXXXX </th>
+                <th colspan="1"> <img src="/image/nantes.jpg" alt="texte" width="250" height="170"> </th>
+             </tr>
 
-                    <td><svg width="400" height="110">
-                        <rect width="100" height="100" style="fill:rgb(34,139,34);" />
-                        </svg>
-
-                    </td>
-
-                    <td>
-                      <h3>  <img src="/image/nantes.jpg" alt="texte" width="250" height="170">
-                      </h3>
-                    </td>
-              
-              
             </table>    
     </body>
 </html>
