--- a/medias.html
+++ b/medias.html
@@ -16,14 +16,15 @@
         <p> <a href="textlistforms.html">Textes&Listes&Formulaires  </a> | <a href="tables.html">Tableaux </a> | <a href="medias.html">Medias</a></p>  
         <hr>
         <ol>
-         <li><a href="#">Images </a></li>
-         <li><a href="#">Vidéo 1 </a></li>
-         <li><a href="#">Vidéo 2 </a></li>
-         <li><a href="#">Audio  </a></li>
-         <li><a href="#">Iframe  </a></li>
+         <li><a href="#Images" >Images  </a></li>
+         <li><a href="#Vidéo 1">Vidéo 1 </a></li>
+         <li><a href="#Vidéo 2">Vidéo 2 </a></li>
+         <li><a href="#Audio">Audio  </a></li>
+         <li><a href="#Iframe">Iframe  </a></li>
         </ol>
         <hr>
         <h1>Manipulations des médias en HTML</h1>
+        <div id="Images">
         <h3>Images  <span class="material-icons">
             insert_photo
             </span></h3>
@@ -41,6 +42,36 @@
                 <th colspan="1"> <img src="/image/nantes.jpg" alt="texte" width="250" height="170"> </th>
              </tr>
 
-            </table>    
+            </table>
+        </div>   
+        <div id="Vidéo 1">
+         <h3>Vidéo avec la balise < iframe ></h3>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/7gwK1dcz0IU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <div id="Vidéo 2">
+         <h3>Vidéo avec la balise < vidéo ><span class="material-icons">
+          movie
+          </span></h3>
+         <video width="320" height="240" controls>
+          <source src="/vidéo/windtunnel.mp4" type="video/mp4">
+         </video>
+        </div>
+
+        <div id="Audio"></div>
+          <h3>Audio<span class="material-icons">
+            audiotrack
+            </span></h3>
+
+          <audio controls>
+            <source src="/audio/audio.mp3.m4a" type="audio/mp3">
+          </audio>
+        </div>
+              
+        <div id="Iframe"></div>
+          <h3> Iframe <span class="material-icons">insert_link</span> <a href="https://www.isen-nantes.fr/" target="iframe">Cliquez ici  </a> </h3>
+          <iframe src="" width="600" height="300" name="iframe"></iframe>
+        </div>
+          
     </body>
 </html>
